name:                simon
version:             0.1.0.0
synopsis:            Simon game clone using Gloss
description:

  A simple version of the classic Simon game using Gloss for graphics.
  
homepage:            https://github.com/gustavohb/simon#readme
license:             MIT
author:              Gustavo Barrionuevo
maintainer:          gustavohb@github.com
copyright:           2018 Gustavo Barrionuevo
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simon
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , gloss
